commit changes